--- a/airports_RC.ipynb
+++ b/airports_RC.ipynb
@@ -230,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Average Degree Connectivity - TODO: Plot this?\n",
+    "### Average Degree Connectivity\n",
     "How popular are the airports that connect to the popular/unpopular airports"
    ]
   },
