--- a/airports_RC.ipynb
+++ b/airports_RC.ipynb
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Clustering stuff ?? Maybe it won't work because of that multigraph shit\n",
+    "# Clustering stuff ?? Maybe it won't work because of that multigraph stuff\n",
     "# Average times that airports B<->C given that A<->C and A<->B\n",
     "# Can't do this since this a a multigraph (more than one edge can exist from A to B)\n",
     "# print(\"Average Clustering: \", nx.triangles(G))"
